--- a/index.html
+++ b/index.html
@@ -75,7 +75,6 @@
           <hr class="dark md">
           <button type="submit" class="btn btn-outline-dark">Submit</button>
           <hr class="yellow sm">
-
         </form>
       </div>
 
@@ -83,37 +82,36 @@
       <div class="col-8">
         <div id="incompleteQuiz" class="quizResults">
           <h3>Answer each Question to find out which language is right for you</h3>
-          <h1>Try it out!</h1>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga impedit, obcaecati, soluta quod aperiam maiores blanditiis facere aspernatur ea enim ipsum saepe, tenetur dolorem quaerat pariatur iure dignissimos officiis! Eum.</p>
+          <h1>Your journey starts here</h1>
+          <p>So you've came here to learn which language you might want to start you're development journey on? Well this is the first step! Fill out the form to get started.</p>
         </div>
         <div id="javascriptContent" class="quizResults">
           <div class="row">
             <div class="col-md-9">
-              <h3>You Selected a Front-end Language</h3>
+              <h3>Based on your answers we've matched you with:</h3>
               <h1>JavaScript</h1>
-              <h2></h2>
-              <p>Alongside HTML and CSS, JavaScript is one of the core technologies of the World Wide Web. JavaScript enables interactive web pages and is an essential part of web applications. The vast majority of websites use it for client-side page behavior, and all major web browsers have a dedicated JavaScript engine to execute it. <cite><a href="https://en.wikipedia.org/wiki/JavaScript">JavaScript from Wikipedia</a></cite></p>
-
+              <h2>JavaScript, often abbreviated as JS, is a programming language that conforms to the ECMAScript specification.</h2>
+              <p>Alongside HTML and CSS, JavaScript is one of the core technologies of the World Wide Web. JavaScript enables interactive web pages and is an essential part of web applications. The vast majority of websites use it for client-side page behavior, and all major web browsers have a dedicated JavaScript engine to execute it. <cite>Cited: <a href="https://en.wikipedia.org/wiki/JavaScript">JavaScript from Wikipedia</a></cite></p>
             </div>
             <div class="col-md-3">
               <img class="languageLogo" src="img/javascript-logo.png">
             </div>
           </div>
-          <h4>JavaScript Resources</h4>
 
+          <h4>JavaScript Resources</h4>
           <div class="row">
             <div class="col-md-6">
               <ul>
-                <li><a href="https://www.javascript.com/">Official Website</a></li>
-                <li><a href="https://www.w3schools.com/js/DEFAULT.asp">w3 Schools</a></li>
-                <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript">Mozilla Developer Network (MDN</a></li>
+                <li><a target="_blank" href="https://www.javascript.com/">Official Website</a></li>
+                <li><a target="_blank" href="https://www.w3schools.com/js/DEFAULT.asp">w3 Schools</a></li>
+                <li><a target="_blank" href="https://developer.mozilla.org/en-US/docs/Web/JavaScript">Mozilla Developer Network (MDN</a></li>
               </ul>
             </div>
             <div class="col-md-6">
               <ul>
-                <li><a href="https://www.codecademy.com/catalog/language/javascript">Code Academy Tutorials</a></li>
-                <li><a href="http://jsforcats.com/">Javascript for Cats</a></li>
-                <li><a href="https://jsbooks.revolunet.com/">JSbooks</a></li>
+                <li><a target="_blank" href="https://www.codecademy.com/catalog/language/javascript">Code Academy Tutorials</a></li>
+                <li><a target="_blank" href="http://jsforcats.com/">Javascript for Cats</a></li>
+                <li><a target="_blank" href="https://jsbooks.revolunet.com/">JSbooks</a></li>
               </ul>
             </div>
           </div>
@@ -122,30 +120,30 @@
         <div id="swiftContent" class="quizResults">
           <div class="row">
             <div class="col-md-9">
-              <h3>You Selected a multi-paradigm Language</h3>
+              <h3>Based on your answers we've matched you with:</h3>
               <h1>Swift</h1>
               <h2>Swift is a general-purpose, multi-paradigm, compiled programming language developed by Apple Inc. and the open-source community, first released in 2014.</h2>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga impedit, obcaecati, soluta quod aperiam maiores blanditiis facere aspernatur ea enim ipsum saepe, tenetur dolorem quaerat pariatur iure dignissimos officiis! Eum.</p>
+              <p>Swift was developed as a replacement for Apple's earlier programming language Objective-C, as Objective-C had been largely unchanged since the early 1980s and lacked modern language features. Swift works with Apple's Cocoa and Cocoa Touch frameworks, and a key aspect of Swift's design was the ability to interoperate with the huge body of existing Objective-C code developed for Apple products over the previous decades. It is built with the open source LLVM compiler framework and has been included in Xcode since version 6, released in 2014. On Apple platforms,[11] it uses the Objective-C runtime library which allows C, Objective-C, C++ and Swift code to run within one program. <cite>Cited: <a href="https://en.wikipedia.org/wiki/Swift_(programming_language)">Swift (programming language) from Wikipedia</a></cite></p>
             </div>
             <div class="col-md-3">
               <img class="languageLogo" src="img/swift-logo.png">
             </div>
           </div>
-          <h4>Swift Resources</h4>
 
+          <h4>Swift Resources</h4>
           <div class="row">
             <div class="col-md-6">
               <ul>
-                <li><a href="https://developer.apple.com/">Apple Developer</a></li>
-                <li><a href="">Hacking with Swift</a></li>
-                <li><a href="https://www.raywenderlich.com/ios/paths/learn">raywenderlich</a></li>
+                <li><a target="_blank" href="https://developer.apple.com/">Apple Developer</a></li>
+                <li><a target="_blank" href="">Hacking with Swift</a></li>
+                <li><a target="_blank" href="https://www.raywenderlich.com/ios/paths/learn">raywenderlich</a></li>
               </ul>
             </div>
             <div class="col-md-6">
               <ul>
-                <li><a href="https://fuckingswiftui.com/">Fricking SwiftUI</a></li>
-                <li><a href="https://docs.swift.org/swift-book/GuidedTour/GuidedTour.html">Official docs</a></li>
-                <li><a href="https://codewithchris.com/learn-swift/">Coding with Chris</a></li>
+                <li><a target="_blank" href="https://fuckingswiftui.com/">Fricking SwiftUI</a></li>
+                <li><a target="_blank" href="https://docs.swift.org/swift-book/GuidedTour/GuidedTour.html">Official docs</a></li>
+                <li><a target="_blank" href="https://codewithchris.com/learn-swift/">Coding with Chris</a></li>
               </ul>
             </div>
           </div>
@@ -154,30 +152,30 @@
         <div id="cContent" class="quizResults">
           <div class="row">
             <div class="col-md-9">
-              <h3>You Selected a Backend Language</h3>
-              <h1>C#</h1>
-              <h2></h2>
+              <h3>Based on your answers we've matched you with:</h3>
+              <h1>C Sharp (C#)</h1>
+              <h2>C# is a general-purpose, multi-paradigm programming language encompassing static typing, strong typing, lexically scoped, imperative, declarative, functional, generic, object-oriented, and component-oriented programming disciplines.</h2>
+              <p>C# was developed around 2000 by Microsoft as part of its .NET initiative and later approved as an international standard by Ecma (ECMA-334) in 2002 and ISO (ISO/IEC 23270) in 2003. It was designed by Anders Hejlsberg, and its development team is currently led by Mads Torgersen, being one of the programming languages designed for the Common Language Infrastructure (CLI). The most recent version is 9.0, which was released in 2020 in .NET 5.0 and included in Visual Studio 2019 version 16.8.<cite>Cited: <a href="https://en.wikipedia.org/wiki/C_Sharp_(programming_language)">C Sharp (programming language) from Wikipedia</a></cite></p>
             </div>
             <div class="col-md-3">
               <img class="languageLogo" src="img/csharp-logo.png">
             </div>
           </div>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga impedit, obcaecati, soluta quod aperiam maiores blanditiis facere aspernatur ea enim ipsum saepe, tenetur dolorem quaerat pariatur iure dignissimos officiis! Eum.</p>
-          <h4>C# Resources</h4>
 
+          <h4>C# Resources</h4>
           <div class="row">
             <div class="col-md-6">
               <ul>
-                <li><a href="https://docs.microsoft.com/en-us/dotnet/csharp/">C# | Microsoft Docs</a></li>
-                <li><a href="http://learncs.org/">LearnCS.org</a></li>
-                <li><a href="https://www.tutorialsteacher.com/csharp/csharp-tutorials">Tutorials Teacher</a></li>
+                <li><a target="_blank" href="https://docs.microsoft.com/en-us/dotnet/csharp/">C# | Microsoft Docs</a></li>
+                <li><a target="_blank" href="http://learncs.org/">LearnCS.org</a></li>
+                <li><a target="_blank" href="https://www.tutorialsteacher.com/csharp/csharp-tutorials">Tutorials Teacher</a></li>
               </ul>
             </div>
             <div class="col-md-6">
               <ul>
-                <li><a href="http://csharp-station.com/Tutorial/CSharp/SmartConsoleSetup.aspx">C# Station</a></li>
-                <li><a href="http://www.kau.edu.sa/Files/830/Files/55533_C_Sharp_Programming.pdf">C# Programming</a></li>
-                <li><a href="http://www.techotopia.com/index.php/C_Sharp_Essentials">C# Essentials</a></li>
+                <li><a target="_blank" href="http://csharp-station.com/Tutorial/CSharp/SmartConsoleSetup.aspx">C# Station</a></li>
+                <li><a target="_blank" href="http://www.kau.edu.sa/Files/830/Files/55533_C_Sharp_Programming.pdf">C# Programming</a></li>
+                <li><a target="_blank" href="http://www.techotopia.com/index.php/C_Sharp_Essentials">C# Essentials</a></li>
               </ul>
             </div>
           </div>
@@ -186,46 +184,46 @@
         <div id="pythonContent" class="quizResults">
           <div class="row">
             <div class="col-md-9">
-              <h3>You Selected a Backend Language</h3>
+              <h3>Based on your answers we've matched you with:</h3>
               <h1>Python</h1>
-              <h2></h2>
+              <h2>Python is an interpreted, high-level and general-purpose programming language. Python's design philosophy emphasizes code readability with its notable use of significant indentation.</h2>
+              <p>Python is dynamically-typed and garbage-collected. It supports multiple programming paradigms, including structured (particularly, procedural), object-oriented and functional programming. Python is often described as a "batteries included" language due to its comprehensive standard library. <cite>Cited: <a href="https://en.wikipedia.org/wiki/Python_(programming_language)">Python (programming language) from Wikipedia</a></cite></p>
             </div>
             <div class="col-md-3">
               <img class="languageLogo" src="img/python-logo.png">
             </div>
           </div>
-          <p>Python is an interpreted, high-level and general-purpose programming language. Python's design philosophy emphasizes code readability with its notable use of significant indentation. Its language constructs and object-oriented approach aim to help programmers write clear, logical code for small and large-scale projects. <cite><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">Python (programming language) from Wikipedia</a></cite></p>
-          <hr>
-          <h4>Python Resources</h4>
 
+          <h4>Python Resources</h4>
           <div class="row">
             <div class="col-md-6">
               <ul>
-                <li><a href="https://www.python.org/">Official Python Website</a></li>
-                <li><a href="https://www.codecademy.com/learn/learn-python">Code Academy</a></li>
-                <li><a href="https://inventwithpython.com/">Invent with Python</a></li>
+                <li><a target="_blank" href="https://www.python.org/">Official Python Website</a></li>
+                <li><a target="_blank" href="https://www.codecademy.com/learn/learn-python">Code Academy</a></li>
+                <li><a target="_blank" href="https://inventwithpython.com/">Invent with Python</a></li>
               </ul>
             </div>
             <div class="col-md-6">
               <ul>
-                <li><a href="https://pythonspot.com/">Python Spot</a></li>
-                <li><a href="https://developers.google.com/edu/python/?hl=en">Google's Python Class eBook</a></li>
-                <li><a href="http://www.diveintopython3.net/">Dive into Python 3</a></li>
+                <li><a target="_blank" href="https://pythonspot.com/">Python Spot</a></li>
+                <li><a target="_blank" href="https://developers.google.com/edu/python/?hl=en">Google's Python Class eBook</a></li>
+                <li><a target="_blank" href="http://www.diveintopython3.net/">Dive into Python 3</a></li>
               </ul>
             </div>
           </div>
         </div>
 
-        <hr class="light">
+        <hr class="yellow">
         <div class="col-12" id="qualities">
-          <p>All the options in this question are great qualities to have as a developer. Think about some of the qualities you already bring to the table and then do some reading on other qualities you can improve on and develop over time. These are all qualities that will help you land a job in tech sector.</p>
+          <p>All the options in this question are great qualities to have as a developer. Think about some of the qualities you already bring to the table and then do some reading on other qualities you can improve on and develop over time. These are all qualities that will help you land a job in the Technology sector.</p>
         </div>
       </div>
     </div>
+    
     <div id="footer">
       <hr class="yellow">
-      <p>This site has an incomplete sampling of languages available to learn and was created to utilize development best practices and to display coding progress on the road to becoming a developer.</p>
-      <a href="https://github.com/basicjohn">Created by John Edmondson</a>
+      <p>This site has an incomplete sampling of languages available to learn and was created to utilize development best practices & to display coding progress on the road to becoming a developer.</p>
+      <a target="_blank" href="https://github.com/basicjohn">Created by John Edmondson</a>
     </div>
   </div>
 </body>
