change wording of a couple Q's

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <p id="instructions">complete each question below to get a <br>coding language suggestion</p>
         <hr class="dark md">
         <form id="suggesterQuestions">
-          <h4>What are arena are you looking to develop in?</h4>
+          <h4>What development arena are you looking to start in?</h4>
           <select class="custom-select" id="question1">
             <option selected>Environment</option>
             <option value="1">Front-end</option>
@@ -36,12 +36,12 @@
             <option value="3">A little bit of both</option>
           </select>
           <hr class="dark md">
-          <h4>To be proficient how long do you have to learn?</h4>
+          <h4>What is your level of patience?</h4>
           <select class="custom-select" id="question2">
-            <option selected>Time To Learn</option>
-            <option value="1">Short</option>
+            <option selected>Patience Level</option>
+            <option value="1">Small</option>
             <option value="2">Medium</option>
-            <option value="3">Long</option>
+            <option value="3">Large</option>
           </select>
           <hr class="dark md">
           <h4>Do you want the Programming Language to fast?</h4>
@@ -219,7 +219,7 @@
         </div>
       </div>
     </div>
-    
+
     <div id="footer">
       <hr class="yellow">
       <p>This site has an incomplete sampling of languages available to learn and was created to utilize development best practices & to display coding progress on the road to becoming a developer.</p>
