--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div id="incompleteQuiz" class="quizResults">
           <h3>Answer each Question to find out which language is right for you</h3>
           <h1>Your journey starts here</h1>
-          <p>So you've came here to learn which language you might want to start you're development journey on? Well this is the first step! Fill out the form to get started.</p>
+          <p>So you've came here to learn which language you might want to start your development journey on? Well this is the first step! Fill out the form to get started.</p>
         </div>
         <div id="javascriptContent" class="quizResults">
           <div class="row">
