further style header & footer

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 
         <hr class="yellow">
         <div class="col-12" id="qualities">
-          <p>All the options in this question are great qualities to have as a developer. Think about some of the qualities you already bring to the table and then do some reading on other qualities you can improve on and develop over time. These are all qualities that will help you land a job in the Technology sector.</p>
+          <p>All the options in this question are great qualities to have as a developer. Think about some of the qualities you already bring to the table and then do some reading on other qualities you can improve on and develop over time. These are all qualities that will help you land a job in the technology sector.</p>
         </div>
       </div>
     </div>
