further style header & footer

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <!-- Quiz -->
     <div class="row">
-      <div class="col-4" id="sidebar">
+      <div class="col-4 col-xs-12" id="sidebar">
         <hr class="yellow sm">
         <p id="instructions">complete each question below to get a <br>coding language suggestion</p>
         <hr class="dark md">
@@ -79,7 +79,7 @@
       </div>
 
       <!-- Quiz Results -->
-      <div class="col-8">
+      <div class="col-8 col-xs-12">
         <div id="incompleteQuiz" class="quizResults">
           <h3>Answer each Question to find out which language is right for you</h3>
           <h1>Your journey starts here</h1>
